--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>Student Track</title>
     
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-<script src="scripts/CloudABIS-ScanR.js"></script>
-<script src="scripts/CloudABIS-Helper.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
+    <script src="/assets/js/CloudABIS-ScanR.js"></script>
+    <script src="/assets/js/CloudABIS-Helper.js"></script>
 </head>
 <body>
     <div class="container">
@@ -41,6 +42,9 @@
         </div>
         <div class="row">
             <div class="col-12">
+                <% if (messages.info) { %>
+                <p class="success-message"><%- messages.info %></p>
+                <% } %>
                 <a class="btn btn-primary float-right" href="/new"><i class="fa fa-plus"></i> Add New</a>
             </div>
         </div>
@@ -49,7 +53,7 @@
     <div class="container">        
         <% if(data.length){ %>
             <h3>Student List</h3>
-            <table class="table table-bordered table-striped table-hover">
+            <table class="table table-bordered table-striped">
                 <thead>
                     <tr>
                         <th>Student ID (Biometric ID)</th>
