--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>    
-    <script src="scripts/CloudABIS-ScanR.js"></script>
-    <script src="scripts/CloudABIS-Helper.js"></script>
+    <script src="/assets/js/CloudABIS-ScanR.js"></script>
+    <script src="/assets/js/CloudABIS-Helper.js"></script>
 
     <title>Add New Student</title>
     <script>
@@ -46,10 +46,13 @@
             </div>          
             
             <button type="submit" name="register" class="btn btn-primary">Submit</button>
-            <a href="/home" class="btn btn-outline-info">Home</a>
+            <a href="/" class="btn btn-outline-info">Home</a>
         </form>
 
         <label id="serverResult"></label>
+        <% if (messages.info) { %>
+        <p class="success-message"><%- messages.info %></p>
+        <% } %>
         
     </div>    
 </body>
